[package]
name = "hglib-rs"
version = "0.1.0"
edition = "2018"
authors = ["calixteman <cdenizet@mozilla.com>"]
repository = "https://github.com/mozilla/hglib-rust"
documentation = "https://docs.rs/hglib-rs/"
keywords = ["mercurial"]
description = "Rust implementation of python-hglib"
license = "MPL-2.0"

[dependencies]
byteorder = "1.3"
chrono = "0.4"
regex = "1.3"
subprocess = "0.1"

[lib]
name = "hglib"
path = "src/lib.rs"
